# job-ops

./: .env.example  .gitignore  README.md  db.py  main.py  pyproject.toml  pytest.ini  run.py
.github/workflows/: ci.yml
agent/: config.py  designer.py  graph.py  nodes.py  prompts.py  state.py
static/: app.js  history.html  index.html  jobs.html  style.css
tests/: test_api.py  test_db.py  test_nodes.py
tests/e2e/: test_ui.py
